--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,11 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+
 body {
+  font-family: "Courier New", Courier, monospace;
   background-color: #f5f5f5;
   color: #4e4e4e;
 }
@@ -28,7 +32,7 @@ a {
   transition: all 0.5s ease-in-out;
 }
 a:hover {
-  color: #0078ff;
+  color: #4961dc;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -39,7 +43,7 @@ a:hover {
 
 .color-a {
   text-decoration: none;
-  color: #0078ff;
+  color: #4961dc;
 }
 
 .color-d {
@@ -97,7 +101,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #4961dc;
 }
 
 .overlay-mf {
@@ -151,6 +155,15 @@ a:hover {
   margin-bottom: 4rem;
 }
 
+.title-aa {
+  text-decoration: none;
+  font-size: 3rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ffffff;
+}
+
 .title-a {
   text-decoration: none;
   font-size: 3rem;
@@ -161,12 +174,13 @@ a:hover {
 .subtitle-a {
   text-decoration: none;
   color: #4e4e4e;
+  color: #ffffff;
 }
 
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #4961dc;
   margin: 0 auto;
 }
 
@@ -183,7 +197,7 @@ a:hover {
   content: "";
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #4961dc;
   width: 100px;
   bottom: -12px;
 }
@@ -218,14 +232,14 @@ a:hover {
   height: 40px;
   width: 40px;
   font-size: 1.2rem;
-  border-radius: 50%;
+  border-radius: 8%;
   line-height: 1.6;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #4961dc;
   transition: all 500ms ease;
 }
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #4961dc;
   color: #fff;
   box-shadow: 0 0 0 3px #cde1f8;
   transition: all 500ms ease;
@@ -248,7 +262,7 @@ a:hover {
   line-height: 2;
 }
 .list-ico span {
-  color: #0078ff;
+  color: #4961dc;
   margin-right: 10px;
 }
 
@@ -256,12 +270,13 @@ a:hover {
 .ico-circle {
   height: 100px;
   width: 100px;
+
   font-size: 2rem;
   border-radius: 50%;
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px #4961dc;
   display: block;
 }
 
@@ -301,7 +316,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #4961dc;
   opacity: 0.7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -325,7 +340,7 @@ a:hover {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0078ff;
+  background: #4961dc;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -363,7 +378,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #4961dc;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -414,7 +429,7 @@ a:hover {
 
 .button-a {
   text-decoration: none;
-  background-color: #0078ff;
+  background-color: #4961dc;
   color: #fff;
   border-color: #cde1f8;
 }
@@ -558,7 +573,7 @@ a:hover {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -651,7 +666,7 @@ a:hover {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .navbar-mobile .getstarted,
 .navbar-mobile .getstarted:focus {
@@ -680,7 +695,7 @@ a:hover {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -748,7 +763,7 @@ a:hover {
 }
 .hero-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #4961dc;
 }
 .hero-single .breadcrumb .breadcrumb-item:before {
   color: #cde1f8;
@@ -791,7 +806,7 @@ a:hover {
 }
 .skill-mf .progress .progress-bar {
   height: 0.7rem;
-  background-color: #0078ff;
+  background-color: #4961dc;
 }
 
 /*--------------------------------------------------------------
@@ -807,7 +822,7 @@ a:hover {
 .service-box:hover .ico-circle {
   transition: all 500ms ease;
   color: #fff;
-  background-color: #0078ff;
+  background-color: #4961dc;
   box-shadow: 0 0 0 10px #cde1f8;
 }
 .service-box .service-ico {
@@ -849,19 +864,88 @@ a:hover {
 
 .counter-ico {
   margin-bottom: 1rem;
+  height: 100px;
+  width: 100px;
+  font-size: 100px;
+}
+
+.counter-ico:hover .ico-circle {
+  transition: all 500ms ease;
+  color: #fff;
+  background-color: #4961dc;
+  box-shadow: 0 0 0 10px #cde1f8;
 }
 .counter-ico .ico-circle {
-  height: 60px;
-  width: 60px;
+  height: 200px;
+  width: 200px;
+  font-size: 100px;
+
+  transition: all 500ms ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  border-width: 1px;
   line-height: 1.5;
+
   box-shadow: 0 0 0 10px #cde1f8;
 }
 
+.counter-num .subtitle-a {
+  font-size: 2rem;
+  margin-bottom: 0;
+
+  height: 200px;
+  width: 200px;
+  font-size: 14px;
+}
+
+.counter-num {
+  font-size: 2rem;
+  margin-bottom: 0;
+  height: 200px;
+  width: 200px;
+  font-size: 14px;
+}
 .counter-num .counter {
   font-size: 2rem;
   margin-bottom: 0;
 }
+.counter-num .purecounters {
+  font-size: 2rem;
+  margin-bottom: 0;
+  margin-top: 120px;
+  font-size: 16px;
+  transition: all 500ms ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+}
 
+.counter-num .purecounters-sub {
+  font-size: 2rem;
+  margin-bottom: 0;
+  width: 250px;
+  margin-top: 0px;
+  font-size: 14px;
+  font-weight: 400;
+  transition: all 500ms ease;
+  display: inline-flex;
+  text-align: left;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.counter-num .counter-text {
+  font-size: 1rem;
+  margin-bottom: 0px;
+  margin-top: 0px;
+
+  transition: all 500ms ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
@@ -891,15 +975,15 @@ a:hover {
   font-size: 0.8rem;
 }
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #4961dc;
 }
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #4961dc;
   float: right;
 }
 .work-content .w-like a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .work-content .w-like .num-like {
   font-size: 0.7rem;
@@ -930,13 +1014,13 @@ a:hover {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0078ff;
+  border: 1px solid #4961dc;
 }
 .portfolio-details
   .portfolio-details-slider
   .swiper-pagination
   .swiper-pagination-bullet-active {
-  background-color: #0078ff;
+  background-color: #4961dc;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -992,7 +1076,7 @@ a:hover {
 }
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #4961dc;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -1090,7 +1174,7 @@ a:hover {
 }
 .php-email-form input:focus,
 .php-email-form textarea:focus {
-  border-color: #0078ff;
+  border-color: #4961dc;
 }
 .php-email-form input {
   padding: 10px 15px;
@@ -1100,7 +1184,7 @@ a:hover {
   margin-bottom: 0;
 }
 .php-email-form button[type="submit"] {
-  background: #0078ff;
+  background: #4961dc;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1152,7 +1236,7 @@ a:hover {
   color: #fff;
   padding: 0 15px 5px;
   overflow: hidden;
-  background-color: #0078ff;
+  background-color: #4961dc;
   border-radius: 4px;
 }
 .card-blog .card-category .category {
@@ -1211,7 +1295,7 @@ a:hover {
   margin: 1rem 0;
 }
 .blog-wrapper .post-meta ul {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #4961dc;
   margin-top: 1rem;
 }
 .blog-wrapper .post-meta ul li {
@@ -1219,13 +1303,13 @@ a:hover {
   margin-left: 15px;
 }
 .blog-wrapper .post-meta ul a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .blog-wrapper .post-meta ul span {
   color: #1e1e1e;
 }
 .blog-wrapper .blockquote {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #4961dc;
   padding: 18px;
   font-style: italic;
 }
@@ -1256,7 +1340,7 @@ a:hover {
   padding-left: 25px;
 }
 .box-comments .list-comments a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .box-comments .list-comments span {
   color: #1e1e1e;
@@ -1270,7 +1354,7 @@ a:hover {
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
-  border-left: 5px solid #0078ff;
+  border-left: 5px solid #4961dc;
   padding-left: 15px;
   text-transform: uppercase;
   margin-bottom: 1.5rem;
@@ -1285,7 +1369,7 @@ a:hover {
   width: 10px;
   height: 1px;
   left: 0;
-  background-color: #0078ff;
+  background-color: #4961dc;
   top: 20px;
 }
 
@@ -1295,8 +1379,8 @@ a:hover {
   transition: all 0.5s ease-in-out;
 }
 .sidebar-search .btn-search {
-  background-color: #0078ff;
-  border-color: #0078ff;
+  background-color: #4961dc;
+  border-color: #4961dc;
   border-radius: 0;
   padding-left: 20px;
   padding-right: 20px;
@@ -1304,7 +1388,7 @@ a:hover {
 
 .widget-tags ul li {
   display: inline-block;
-  background-color: #0078ff;
+  background-color: #4961dc;
   padding: 0.2rem 0.6rem;
   margin-bottom: 0.5rem;
   border-radius: 15px;
