--- a/assets/css/styleAr.css
+++ b/assets/css/styleAr.css
@@ -28,7 +28,7 @@ a {
   transition: all 0.5s ease-in-out;
 }
 a:hover {
-  color: #0078ff;
+  color: #4961dc;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -39,7 +39,7 @@ a:hover {
 
 .color-a {
   text-decoration: none;
-  color: #0078ff;
+  color: #4961dc;
 }
 
 .color-d {
@@ -97,7 +97,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #4961dc;
 }
 
 .overlay-mf {
@@ -143,17 +143,22 @@ a:hover {
 .title-s {
   font-weight: 600;
   color: #1e1e1e;
+  text-align: right;
+
   font-size: 1.1rem;
 }
 
 /*--/ Title A /--*/
 .title-box {
   margin-bottom: 4rem;
+  text-align: right;
 }
 
 .title-a {
   text-decoration: none;
   font-size: 3rem;
+  text-align: right;
+
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -166,24 +171,27 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #4961dc;
   margin: 0 auto;
 }
 
 /*--/ Title Left /--*/
 .title-box-2 {
   margin-bottom: 3rem;
+  text-align: right;
 }
 
 .title-left {
   font-size: 2rem;
   position: relative;
+  text-align: right;
 }
 .title-left:before {
   content: "";
+  text-align: right;
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #919196;
   width: 100px;
   bottom: -12px;
 }
@@ -221,11 +229,11 @@ a:hover {
   border-radius: 50%;
   line-height: 1.6;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #506de0;
   transition: all 500ms ease;
 }
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #506de0;
   color: #fff;
   box-shadow: 0 0 0 3px #cde1f8;
   transition: all 500ms ease;
@@ -248,7 +256,7 @@ a:hover {
   line-height: 2;
 }
 .list-ico span {
-  color: #0078ff;
+  color: #4961dc;
   margin-right: 10px;
 }
 
@@ -261,7 +269,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px #4961dc;
   display: block;
 }
 
@@ -301,7 +309,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #4961dc;
   opacity: 0.7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -325,7 +333,7 @@ a:hover {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0078ff;
+  background: #4961dc;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -363,7 +371,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #4961dc;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -414,7 +422,7 @@ a:hover {
 
 .button-a {
   text-decoration: none;
-  background-color: #0078ff;
+  background-color: #4961dc;
   color: #fff;
   border-color: #cde1f8;
 }
@@ -442,16 +450,20 @@ a:hover {
   transition: all 0.5s;
   z-index: 997;
   padding: 20px 0;
+  float: right;
 }
 #header .logo {
   font-size: 28px;
   margin: 0;
+  float: right;
+
   padding: 0;
   font-weight: 600;
   letter-spacing: 1px;
 }
 #header .logo a {
   color: #fff;
+  float: right;
 }
 #header .logo img {
   max-height: 40px;
@@ -469,12 +481,15 @@ a:hover {
 */
 .navbar {
   padding: 0;
+  float: right;
 }
 .navbar ul {
   margin: 0;
   padding: 0;
   display: flex;
   list-style: none;
+  float: right;
+
   align-items: center;
 }
 .navbar li {
@@ -558,7 +573,7 @@ a:hover {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -651,7 +666,7 @@ a:hover {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .navbar-mobile .getstarted,
 .navbar-mobile .getstarted:focus {
@@ -680,7 +695,7 @@ a:hover {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -748,7 +763,7 @@ a:hover {
 }
 .hero-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #4961dc;
 }
 .hero-single .breadcrumb .breadcrumb-item:before {
   color: #cde1f8;
@@ -766,32 +781,40 @@ a:hover {
 .about-mf .box-shadow-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
+  text-align: right;
 }
 .about-mf .about-img {
   margin-bottom: 2rem;
+  text-align: right;
 }
 .about-mf .about-img img {
   margin-left: 10px;
+  text-align: right;
 }
 @media (min-width: 767px) {
   .about-mf .box-pl2 {
     margin-top: 3rem;
     padding-left: 0rem;
+    text-align: right;
   }
 }
 
 .skill-mf span {
   color: #4e4e4e;
+  text-align: right;
 }
 .skill-mf .progress {
   background-color: #cde1f8;
   margin: 0.5rem 0 1.2rem 0;
+  text-align: right;
   border-radius: 0;
   height: 0.7rem;
 }
 .skill-mf .progress .progress-bar {
   height: 0.7rem;
-  background-color: #0078ff;
+  text-align: right;
+
+  background-color: #4961dc;
 }
 
 /*--------------------------------------------------------------
@@ -807,7 +830,7 @@ a:hover {
 .service-box:hover .ico-circle {
   transition: all 500ms ease;
   color: #fff;
-  background-color: #0078ff;
+  background-color: #4961dc;
   box-shadow: 0 0 0 10px #cde1f8;
 }
 .service-box .service-ico {
@@ -848,11 +871,14 @@ a:hover {
 }
 
 .counter-ico {
-  margin-bottom: 1rem;
+  transition: all 500ms ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 .counter-ico .ico-circle {
-  height: 60px;
-  width: 60px;
+  height: 150px;
+  width: 150px;
   line-height: 1.5;
   box-shadow: 0 0 0 10px #cde1f8;
 }
@@ -891,15 +917,15 @@ a:hover {
   font-size: 0.8rem;
 }
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #4961dc;
 }
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #4961dc;
   float: right;
 }
 .work-content .w-like a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .work-content .w-like .num-like {
   font-size: 0.7rem;
@@ -930,13 +956,13 @@ a:hover {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0078ff;
+  border: 1px solid #4961dc;
 }
 .portfolio-details
   .portfolio-details-slider
   .swiper-pagination
   .swiper-pagination-bullet-active {
-  background-color: #0078ff;
+  background-color: #4961dc;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -992,7 +1018,7 @@ a:hover {
 }
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #4961dc;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -1090,7 +1116,7 @@ a:hover {
 }
 .php-email-form input:focus,
 .php-email-form textarea:focus {
-  border-color: #0078ff;
+  border-color: #4961dc;
 }
 .php-email-form input {
   padding: 10px 15px;
@@ -1100,7 +1126,7 @@ a:hover {
   margin-bottom: 0;
 }
 .php-email-form button[type="submit"] {
-  background: #0078ff;
+  background: #4961dc;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1152,7 +1178,7 @@ a:hover {
   color: #fff;
   padding: 0 15px 5px;
   overflow: hidden;
-  background-color: #0078ff;
+  background-color: #4961dc;
   border-radius: 4px;
 }
 .card-blog .card-category .category {
@@ -1211,7 +1237,7 @@ a:hover {
   margin: 1rem 0;
 }
 .blog-wrapper .post-meta ul {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #4961dc;
   margin-top: 1rem;
 }
 .blog-wrapper .post-meta ul li {
@@ -1219,13 +1245,13 @@ a:hover {
   margin-left: 15px;
 }
 .blog-wrapper .post-meta ul a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .blog-wrapper .post-meta ul span {
   color: #1e1e1e;
 }
 .blog-wrapper .blockquote {
-  border-left: 4px solid #0078ff;
+  border-left: 4px solid #4961dc;
   padding: 18px;
   font-style: italic;
 }
@@ -1256,7 +1282,7 @@ a:hover {
   padding-left: 25px;
 }
 .box-comments .list-comments a {
-  color: #0078ff;
+  color: #4961dc;
 }
 .box-comments .list-comments span {
   color: #1e1e1e;
@@ -1270,7 +1296,7 @@ a:hover {
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
-  border-left: 5px solid #0078ff;
+  border-left: 5px solid #4961dc;
   padding-left: 15px;
   text-transform: uppercase;
   margin-bottom: 1.5rem;
@@ -1285,7 +1311,7 @@ a:hover {
   width: 10px;
   height: 1px;
   left: 0;
-  background-color: #0078ff;
+  background-color: #4961dc;
   top: 20px;
 }
 
@@ -1295,8 +1321,8 @@ a:hover {
   transition: all 0.5s ease-in-out;
 }
 .sidebar-search .btn-search {
-  background-color: #0078ff;
-  border-color: #0078ff;
+  background-color: #4961dc;
+  border-color: #4961dc;
   border-radius: 0;
   padding-left: 20px;
   padding-right: 20px;
@@ -1304,7 +1330,7 @@ a:hover {
 
 .widget-tags ul li {
   display: inline-block;
-  background-color: #0078ff;
+  background-color: #4961dc;
   padding: 0.2rem 0.6rem;
   margin-bottom: 0.5rem;
   border-radius: 15px;
